Extract all the spark specific code